--- a/public/investment_properties_pages/cost_and_revenue_assumptions.html
+++ b/public/investment_properties_pages/cost_and_revenue_assumptions.html
@@ -1,46 +1,46 @@
 <div id="cost-and-revenue-assumptions">
   <div class="row">
-    <div class="col-md-24 subsection-header align-center">Cost and Revenue Assumptions</div>
+    <div class="col-sm-24 subsection-header align-center">Cost and Revenue Assumptions</div>
   </div>
   <div class="row">
-    <span class="col-md-18">Land</span>
-    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.land_cost | currency}}</span>
+    <span class="col-sm-18">Land</span>
+    <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.land_cost | currency}}</span>
   </div>
   <div class="row">
-    <span class="col-md-18">Building</span>
-    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.building_cost | currency}}</span>
+    <span class="col-sm-18">Building</span>
+    <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.building_cost | currency}}</span>
   </div>
   <div class="row">
-    <span class="col-md-18">Improvements</span>
-    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.improvements | currency}}</span>
+    <span class="col-sm-18">Improvements</span>
+    <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.improvements | currency}}</span>
   </div>
   <div class="row">
-    <span class="col-md-18">Closing Costs</span>
-    <span class="col-md-6 align-right add-border-bottom">{{total_closing_costs | currency}}</span>
+    <span class="col-sm-18">Closing Costs</span>
+    <span class="col-sm-6 align-right add-border-bottom">{{total_closing_costs | currency}}</span>
   </div>
   <div class="row">
-    <span class="col-md-18">Total Cost</span>
-    <span class="col-md-6 align-right">{{total_cost | currency}}</span>
+    <span class="col-sm-18">Total Cost</span>
+    <span class="col-sm-6 align-right">{{total_cost | currency}}</span>
   </div>
   <br>
   <div class="row">
-    <span class="col-md-18">Number of Units</span>
-    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.number_of_units | number:0}}</span>
+    <span class="col-sm-18">Number of Units</span>
+    <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.number_of_units | number:0}}</span>
   </div>
   <div class="row">
-    <span class="col-md-18">Average Monthly Rent</span>
-    <span class="col-md-6 align-right add-border-bottom">{{rental_property.financing_and_income_assumption.average_monthly_rent_per_unit | currency}}</span>
+    <span class="col-sm-18">Average Monthly Rent</span>
+    <span class="col-sm-6 align-right add-border-bottom">{{rental_property.financing_and_income_assumption.average_monthly_rent_per_unit | currency}}</span>
   </div>
   <div class="row">
-    <span class="col-md-18">Gross Monthly Rent</span>
-    <span class="col-md-6 align-right">{{gross_monthly_rent | currency}}</span>
+    <span class="col-sm-18">Gross Monthly Rent</span>
+    <span class="col-sm-6 align-right">{{gross_monthly_rent | currency}}</span>
   </div>
   <div class="row">
-    <span class="col-md-18">Other Income</span>
-    <span class="col-md-6 align-right add-border-bottom">{{rental_property.financing_and_income_assumption.other_monthly_income | currency}}</span>
+    <span class="col-sm-18">Other Income</span>
+    <span class="col-sm-6 align-right add-border-bottom">{{rental_property.financing_and_income_assumption.other_monthly_income | currency}}</span>
   </div>
   <div class="row">
-    <span class="col-md-18">Total Gross Monthly Income</span>
-    <span class="col-md-6 align-right">{{total_gross_monthly_income | currency}}</span>
+    <span class="col-sm-18">Total Gross Monthly Income</span>
+    <span class="col-sm-6 align-right">{{total_gross_monthly_income | currency}}</span>
   </div>
 </div>
