--- a/public/investment_properties_pages/income_and_cost_projections.html
+++ b/public/investment_properties_pages/income_and_cost_projections.html
@@ -1,38 +1,38 @@
 <div id="income-and-cost-projections" class="top-padded">
   <div class="row">
-    <div class="col-md-24 subsection-header align-center">Income and Cost Projections</div>
+    <div class="col-sm-24 subsection-header align-center">Income and Cost Projections</div>
   </div>
   <div id="rent-increases" class="row">
-    <div class="col-md-9">Rent Increases</div>
-    <input class="col-md-3 align-right"
+    <div class="col-sm-9">Rent Increases</div>
+    <input class="col-sm-3 align-right"
            type="text"
            id="year-one-rent-increases-input"
            name="year-one-rent-increases-input"
            format="percentage"
            decimals="1"
            ng-model="rental_property.income_and_cost_projection.rent_increases[0]"/>
-    <input class="col-md-3 align-right"
+    <input class="col-sm-3 align-right"
            type="text"
            id="year-two-rent-increases-input"
            name="year-two-rent-increases-input"
            format="percentage"
            decimals="1"
            ng-model="rental_property.income_and_cost_projection.rent_increases[1]"/>
-    <input class="col-md-3 align-right"
+    <input class="col-sm-3 align-right"
            type="text"
            id="year-three-rent-increases-input"
            name="year-three-rent-increases-input"
            format="percentage"
            decimals="1"
            ng-model="rental_property.income_and_cost_projection.rent_increases[2]"/>
-    <input class="col-md-3 align-right"
+    <input class="col-sm-3 align-right"
            type="text"
            id="year-four-rent-increases-input"
            name="year-four-rent-increases-input"
            format="percentage"
            decimals="1"
            ng-model="rental_property.income_and_cost_projection.rent_increases[3]"/>
-    <input class="col-md-3 align-right"
+    <input class="col-sm-3 align-right"
            type="text"
            id="year-five-rent-increases-input"
            name="year-five-rent-increases-input"
@@ -41,36 +41,36 @@
            ng-model="rental_property.income_and_cost_projection.rent_increases[4]"/>
   </div>
   <div id="operating-expense-increases" class="row">
-    <div class="col-md-9">Op Exp Increases</div>
-    <input class="col-md-3 align-right"
+    <div class="col-sm-9">Op Exp Increases</div>
+    <input class="col-sm-3 align-right"
            type="text"
            id="year-one-operating-expenses-increases-input"
            name="year-one-operating-expenses-increases-input"
            format="percentage"
            decimals="1"
            ng-model="rental_property.income_and_cost_projection.operating_expense_increases[0]"/>
-    <input class="col-md-3 align-right"
+    <input class="col-sm-3 align-right"
            type="text"
            id="year-two-operating-expenses-increases-input"
            name="year-two-operating-expenses-increases-input"
            format="percentage"
            decimals="1"
            ng-model="rental_property.income_and_cost_projection.operating_expense_increases[1]"/>
-    <input class="col-md-3 align-right"
+    <input class="col-sm-3 align-right"
            type="text"
            id="year-three-operating-expenses-increases-input"
            name="year-three-operating-expenses-increases-input"
            format="percentage"
            decimals="1"
            ng-model="rental_property.income_and_cost_projection.operating_expense_increases[2]"/>
-    <input class="col-md-3 align-right"
+    <input class="col-sm-3 align-right"
            type="text"
            id="year-four-operating-expenses-increases-input"
            name="year-four-operating-expenses-increases-input"
            format="percentage"
            decimals="1"
            ng-model="rental_property.income_and_cost_projection.operating_expense_increases[3]"/>
-    <input class="col-md-3 align-right"
+    <input class="col-sm-3 align-right"
            type="text"
            id="year-five-operating-expenses-increases-input"
            name="year-five-operating-expenses-increases-input"
