--- a/public/investment_properties_pages/inputs.html
+++ b/public/investment_properties_pages/inputs.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-24 subsection-header align-center">Inputs</div>
+  <div class="col-sm-24 subsection-header align-center">Inputs</div>
 </div>
 <div class="row margin-top-sm">
   <button class="btn btn-primary btn-sm" ng-click="save()">{{persistence_state}}</button>
