--- a/public/investment_properties_pages/key_rent_ratios.html
+++ b/public/investment_properties_pages/key_rent_ratios.html
@@ -1,41 +1,41 @@
 <div id="key-rent-ratios">
   <div class="row">
-    <div class="col-md-24 subsection-header align-center">Key Rent Ratios</div>
+    <div class="col-sm-24 subsection-header align-center">Key Rent Ratios</div>
   </div>
   <div id="total-square-feet" class="row">
-    <span class="col-md-18">Total Square Feet</span>
-    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.total_square_feet | number:0}}</span>
+    <span class="col-sm-18">Total Square Feet</span>
+    <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.total_square_feet | number:0}}</span>
   </div>
   <div id="avg-square-feet-per-unit" class="row">
-    <span class="col-md-18">Avg Sq Ft/Unit</span>
-    <span class="col-md-6 align-right">{{avg_sq_ft_per_unit | number:0}}</span>
+    <span class="col-sm-18">Avg Sq Ft/Unit</span>
+    <span class="col-sm-6 align-right">{{avg_sq_ft_per_unit | number:0}}</span>
   </div>
   <div id="avg-rent-per-sq-ft" class="row">
-    <span class="col-md-18">Avg Rent/Sq Ft</span>
-    <span class="col-md-6 align-right">{{avg_rent_per_sq_ft | currency}}</span>
+    <span class="col-sm-18">Avg Rent/Sq Ft</span>
+    <span class="col-sm-6 align-right">{{avg_rent_per_sq_ft | currency}}</span>
   </div>
   <div id="total-cost-per-sq-ft" class="row">
-    <span class="col-md-18">Total Cost/Sq Ft</span>
-    <span class="col-md-6 align-right">{{total_cost_per_sq_ft | currency:'$':0}}</span>
+    <span class="col-sm-18">Total Cost/Sq Ft</span>
+    <span class="col-sm-6 align-right">{{total_cost_per_sq_ft | currency:'$':0}}</span>
   </div>
   <div id="total-cost-per-unit" class="row">
-    <span class="col-md-18">Cost per Unit</span>
-    <span class="col-md-6 align-right">{{cost_per_unit | currency:'$':0}}</span>
+    <span class="col-sm-18">Cost per Unit</span>
+    <span class="col-sm-6 align-right">{{cost_per_unit | currency:'$':0}}</span>
   </div>
   <div id="cap-rate" class="row">
-    <span class="col-md-18">Capitalization Rate</span>
-    <span class="col-md-6 align-right">{{cap_rate | percentage:2}}</span>
+    <span class="col-sm-18">Capitalization Rate</span>
+    <span class="col-sm-6 align-right">{{cap_rate | percentage:2}}</span>
   </div>
   <div id="gross-rent-multiplier" class="row">
-    <span class="col-md-18">Gross Rent Multiplier</span>
-    <span class="col-md-6 align-right">{{gross_rent_multiplier | number:2}}</span>
+    <span class="col-sm-18">Gross Rent Multiplier</span>
+    <span class="col-sm-6 align-right">{{gross_rent_multiplier | number:2}}</span>
   </div>
   <div id="operating-efficiency" class="row">
-    <span class="col-md-18">Expenses/Sq Ft (Op Efficiency)</span>
-    <span class="col-md-6 align-right">{{operating_efficiency | number:2}}</span>
+    <span class="col-sm-18">Expenses/Sq Ft (Op Efficiency)</span>
+    <span class="col-sm-6 align-right">{{operating_efficiency | number:2}}</span>
   </div>
   <div id="expenses-per-unit" class="row">
-    <span class="col-md-18">Expenses per Unit</span>
-    <span class="col-md-6 align-right">{{expenses_per_unit | currency:'$':0}}</span>
+    <span class="col-sm-18">Expenses per Unit</span>
+    <span class="col-sm-6 align-right">{{expenses_per_unit | currency:'$':0}}</span>
   </div>
 </div>
