--- a/public/investment_properties_pages/new_property_drawer.html
+++ b/public/investment_properties_pages/new_property_drawer.html
@@ -1,31 +1,31 @@
 <div class="column-header dark-gray">New Property</div>
 <table>
   <tr>
-    <td colspan="4" class="col-md-6 align-left">
+    <td colspan="4" class="col-sm-6 align-left">
       <div class="row bottom-padded">
-        <div class="col-md-5 less-spaced">
-          <input class="col-md-12"
+        <div class="col-sm-5 less-spaced">
+          <input class="col-sm-12"
                  type="text"
                  name="new_property_street"
                  placeholder="1524 Mulberry Street"
                  ng-model="new_property.street">
         </div>
-        <div class="col-md-3 less-spaced">
-          <input class="col-md-12"
+        <div class="col-sm-3 less-spaced">
+          <input class="col-sm-12"
                  type="text"
                  name="new_property_city"
                  placeholder="Fruitvale"
                  ng-model="new_property.city">
         </div>
-        <div class="col-md-2 less-spaced">
-          <input class="col-md-12"
+        <div class="col-sm-2 less-spaced">
+          <input class="col-sm-12"
                  type="text"
                  name="new_property_state"
                  placeholder="CA"
                  ng-model="new_property.state">
         </div>
-        <div class="col-md-2 less-spaced">
-          <input class="col-md-12"
+        <div class="col-sm-2 less-spaced">
+          <input class="col-sm-12"
                  type="text"
                  name="new_property_zip"
                  placeholder="94212"
@@ -35,7 +35,7 @@
     </td>
   </tr>
   <tr class="row top-padded">
-    <td colspan="4" class="col-md-12 align-right">
+    <td colspan="4" class="col-sm-12 align-right">
       <button class="btn btn-secondary btn-sm" ng-click="cancel()">Cancel</button>
       <button class="btn btn-primary btn-sm" ng-click="save_new_property()">Create</button>
     </td>
