--- a/public/investment_properties_pages/operating_income_inputs.html
+++ b/public/investment_properties_pages/operating_income_inputs.html
@@ -1,10 +1,10 @@
 <div id="operating-expenses-inputs" class="top-padded">
   <div class="row">
-    <div class="col-md-24 subsection-header align-center">Monthly Operating Expenses</div>
+    <div class="col-sm-24 subsection-header align-center">Monthly Operating Expenses</div>
   </div>
   <div id="vacancy-rate" class="row">
-    <span class="col-md-18">Vacancy Rate</span>
-    <input class="col-md-6 align-right"
+    <span class="col-sm-18">Vacancy Rate</span>
+    <input class="col-sm-6 align-right"
            type="text"
            id="vacancy-rate-input"
            name="vacancy-rate-input"
@@ -13,8 +13,8 @@
            ng-model="rental_property.operating_expenses_assumption.vacancy_rate"/>
   </div>
   <div id="repairs-and-maintenance" class="row">
-    <span class="col-md-18">Repairs and Maintenance</span>
-    <input class="col-md-6 align-right"
+    <span class="col-sm-18">Repairs and Maintenance</span>
+    <input class="col-sm-6 align-right"
            type="text"
            id="repairs-and-maintenance-input"
            name="repairs-and-maintenance-input"
@@ -24,8 +24,8 @@
            ng-model="rental_property.operating_expenses_assumption.repairs_and_maintenance"/>
   </div>
   <div id="property-management-fees" class="row">
-    <span class="col-md-18">Property Management Fees</span>
-    <input class="col-md-6 align-right"
+    <span class="col-sm-18">Property Management Fees</span>
+    <input class="col-sm-6 align-right"
            type="text"
            id="property-management-fees-input"
            name="property-management-fees-input"
@@ -34,8 +34,8 @@
            ng-model="rental_property.operating_expenses_assumption.property_management_fees"/>
   </div>
   <div id="utilities" class="row">
-    <span class="col-md-18">Utilities</span>
-    <input class="col-md-6 align-right"
+    <span class="col-sm-18">Utilities</span>
+    <input class="col-sm-6 align-right"
            type="text"
            id="utilities-input"
            name="utilities-input"
@@ -43,8 +43,8 @@
            ng-model="rental_property.operating_expenses_assumption.utilities"/>
   </div>
   <div id="taxes" class="row">
-    <span class="col-md-18">Taxes</span>
-    <input class="col-md-6 align-right"
+    <span class="col-sm-18">Taxes</span>
+    <input class="col-sm-6 align-right"
            type="text"
            id="taxes-input"
            name="taxes-input"
@@ -52,8 +52,8 @@
            ng-model="rental_property.operating_expenses_assumption.taxes"/>
   </div>
   <div id="insurance" class="row">
-    <span class="col-md-18">Insurance</span>
-    <input class="col-md-6 align-right"
+    <span class="col-sm-18">Insurance</span>
+    <input class="col-sm-6 align-right"
            type="text"
            id="insurance-input"
            name="insurance-input"
@@ -61,8 +61,8 @@
            ng-model="rental_property.operating_expenses_assumption.insurance"/>
   </div>
   <div id="salaries-and-wages" class="row">
-    <span class="col-md-18">Salaries and Wages</span>
-    <input class="col-md-6 align-right"
+    <span class="col-sm-18">Salaries and Wages</span>
+    <input class="col-sm-6 align-right"
            type="text"
            id="salaries-and-wages-input"
            name="salaries-and-wages-input"
@@ -70,8 +70,8 @@
            ng-model="rental_property.operating_expenses_assumption.salaries_and_wages"/>
   </div>
   <div id="water-and-sewer" class="row">
-    <span class="col-md-18">Water and Sewer</span>
-    <input class="col-md-6 align-right"
+    <span class="col-sm-18">Water and Sewer</span>
+    <input class="col-sm-6 align-right"
            type="text"
            id="water-and-sewer-input"
            name="water-and-sewer-input"
@@ -79,8 +79,8 @@
            ng-model="rental_property.operating_expenses_assumption.water_and_sewer"/>
   </div>
   <div id="trash-removal" class="row">
-    <span class="col-md-18">Trash Removal</span>
-    <input class="col-md-6 align-right"
+    <span class="col-sm-18">Trash Removal</span>
+    <input class="col-sm-6 align-right"
            type="text"
            id="trash-removal-input"
            name="trash-removal-input"
@@ -88,8 +88,8 @@
            ng-model="rental_property.operating_expenses_assumption.trash_removal"/>
   </div>
   <div id="professional-fees" class="row">
-    <span class="col-md-18">Professional Fees</span>
-    <input class="col-md-6 align-right"
+    <span class="col-sm-18">Professional Fees</span>
+    <input class="col-sm-6 align-right"
            type="text"
            id="professional-fees-input"
            name="professional-fees-input"
@@ -97,8 +97,8 @@
            ng-model="rental_property.operating_expenses_assumption.professional_fees"/>
   </div>
   <div id="advertising" class="row">
-    <span class="col-md-18">Advertising</span>
-    <input class="col-md-6 align-right"
+    <span class="col-sm-18">Advertising</span>
+    <input class="col-sm-6 align-right"
            type="text"
            id="advertising-input"
            name="advertising-input"
@@ -106,8 +106,8 @@
            ng-model="rental_property.operating_expenses_assumption.advertising"/>
   </div>
   <div id="landscaping" class="row">
-    <span class="col-md-18">Landscaping</span>
-    <input class="col-md-6 align-right"
+    <span class="col-sm-18">Landscaping</span>
+    <input class="col-sm-6 align-right"
            type="text"
            id="landscaping-input"
            name="landscaping-input"
@@ -115,8 +115,8 @@
            ng-model="rental_property.operating_expenses_assumption.landscaping"/>
   </div>
   <div id="capital-expenditures" class="row">
-    <span class="col-md-18">CapEx</span>
-    <input class="col-md-6 align-right"
+    <span class="col-sm-18">CapEx</span>
+    <input class="col-sm-6 align-right"
            type="text"
            id="capital-expenditures-input"
            name="capital-expenditures-input"
@@ -125,8 +125,8 @@
            ng-model="rental_property.operating_expenses_assumption.capex"/>
   </div>
   <div id="other-expenses" class="row">
-    <span class="col-md-18">Other Expenses</span>
-    <input class="col-md-6 align-right"
+    <span class="col-sm-18">Other Expenses</span>
+    <input class="col-sm-6 align-right"
            type="text"
            id="other-expenses-input"
            name="other-expenses-input"
@@ -134,8 +134,8 @@
            ng-model="rental_property.operating_expenses_assumption.other_expenses"/>
   </div>
   <div id="income-tax-rate" class="row">
-    <span class="col-md-18">Income Tax Rate</span>
-    <input class="col-md-6 align-right"
+    <span class="col-sm-18">Income Tax Rate</span>
+    <input class="col-sm-6 align-right"
            type="text"
            id="income-tax-rate-input"
            name="income-tax-rate-input"
