--- a/public/investment_properties_pages/property_and_loan_information.html
+++ b/public/investment_properties_pages/property_and_loan_information.html
@@ -1,10 +1,10 @@
 <div id="property-and-loan-information">
   <div class="row">
-    <div class="col-md-24 subsection-header align-center">Property and Loan Information</div>
+    <div class="col-sm-24 subsection-header align-center">Property and Loan Information</div>
   </div>
   <div id="land-cost" class="row">
-    <span class="col-md-18">Land Cost</span>
-    <input class="col-md-6"
+    <span class="col-sm-18">Land Cost</span>
+    <input class="col-sm-6"
            type="text"
            id="land-cost-input"
            name="land-cost-input"
@@ -14,8 +14,8 @@
            ng-model="rental_property.financing_and_income_assumption.land_cost"/>
   </div>
   <div id="building-cost" class="row">
-    <span class="col-md-18">Building Cost</span>
-    <input class="col-md-6"
+    <span class="col-sm-18">Building Cost</span>
+    <input class="col-sm-6"
            type="text"
            name="building-cost-input"
            id="building-cost-input"
@@ -25,8 +25,8 @@
            ng-model="rental_property.financing_and_income_assumption.building_cost"/>
   </div>
   <div id="improvements" class="row">
-    <span class="col-md-18">Improvements</span>
-    <input class="col-md-6"
+    <span class="col-sm-18">Improvements</span>
+    <input class="col-sm-6"
            type="text"
            id="improvements-input"
            name="improvements-input"
@@ -36,8 +36,8 @@
            ng-model="rental_property.financing_and_income_assumption.improvements"/>
   </div>
   <div id="total-square-feet" class="row">
-    <span class="col-md-18">Total Square Feet</span>
-    <input class="col-md-6"
+    <span class="col-sm-18">Total Square Feet</span>
+    <input class="col-sm-6"
            type="text"
            id="total-square-feet-input"
            name="total-square-feet-input"
@@ -45,8 +45,8 @@
            ng-model="rental_property.financing_and_income_assumption.total_square_feet"/>
   </div>
   <div id="number-of-units" class="row">
-    <span class="col-md-18">Number of Units</span>
-    <input class="col-md-6"
+    <span class="col-sm-18">Number of Units</span>
+    <input class="col-sm-6"
            type="text"
            format="number"
            id="number-of-units-input"
@@ -54,8 +54,8 @@
            ng-model="rental_property.financing_and_income_assumption.number_of_units"/>
   </div>
   <div id="average-monthly-rent" class="row">
-    <span class="col-md-18">Average Monthly Rent</span>
-    <input class="col-md-6"
+    <span class="col-sm-18">Average Monthly Rent</span>
+    <input class="col-sm-6"
            type="text"
            id="average-monthly-rent-input"
            name="average-monthly-rent-input"
@@ -63,8 +63,8 @@
            ng-model="rental_property.financing_and_income_assumption.average_monthly_rent_per_unit"/>
   </div>
   <div id="other-income" class="row">
-    <span class="col-md-18">Other Income</span>
-    <input class="col-md-6"
+    <span class="col-sm-18">Other Income</span>
+    <input class="col-sm-6"
            type="text"
            id="other-income-input"
            name="other-income-input"
@@ -72,8 +72,8 @@
            ng-model="rental_property.financing_and_income_assumption.other_monthly_income"/>
   </div>
   <div id="equity-percentage" class="row">
-    <span class="col-md-18">Equity Percentage</span>
-    <input class="col-md-6"
+    <span class="col-sm-18">Equity Percentage</span>
+    <input class="col-sm-6"
            type="text"
            id="equity-percentage-input"
            name="equity-percentage-input"
@@ -82,8 +82,8 @@
            ng-model="rental_property.financing_and_income_assumption.equity_percentage"/>
   </div>
   <div id="loan-interest-rate" class="row">
-    <span class="col-md-18">Loan Interest Rate</span>
-    <input class="col-md-6"
+    <span class="col-sm-18">Loan Interest Rate</span>
+    <input class="col-sm-6"
            type="text"
            id="loan-interest-rate-input"
            name="loan-interest-rate-input"
@@ -92,8 +92,8 @@
            ng-model="rental_property.financing_and_income_assumption.loan_interest_rate"/>
   </div>
   <div id="amortization-period-in-years" class="row">
-    <span class="col-md-18">Amortization Period in Years</span>
-    <input class="col-md-6"
+    <span class="col-sm-18">Amortization Period in Years</span>
+    <input class="col-sm-6"
            type="text"
            format="number"
            decimals="0"
