--- a/public/investment_properties_pages/rental_properties.html
+++ b/public/investment_properties_pages/rental_properties.html
@@ -3,11 +3,11 @@
   <table   class="table table-striped table-hover flexbox-item-grow">
     <thead>
     <tr class="row">
-      <th class="col-md-2 subsection-header align-left">Street</th>
-      <th class="col-md-1 subsection-header align-left">City</th>
-      <th class="col-md-1 subsection-header align-left">State</th>
-      <th class="col-md-1 subsection-header align-left">Zip Code</th>
-      <th class="col-md-1 subsection-header align-left">
+      <th class="col-sm-2 subsection-header align-left">Street</th>
+      <th class="col-sm-1 subsection-header align-left">City</th>
+      <th class="col-sm-1 subsection-header align-left">State</th>
+      <th class="col-sm-1 subsection-header align-left">Zip Code</th>
+      <th class="col-sm-1 subsection-header align-left">
         <button class="btn btn-primary btn-sm" ng-click="show_add_property_row()">New Property</button>
       </th>
     </tr>
