--- a/public/investment_properties_pages/return_on_investment.html
+++ b/public/investment_properties_pages/return_on_investment.html
@@ -1,20 +1,20 @@
 <div id="return-on-investment" class="top-padded">
   <div class="row">
-    <div class="col-md-5 align-center subsection-header no-bottom-border">Net Operating Income ROI</div>
-    <div class="col-md-2 align-right"></div>
-    <div class="col-md-2 align-right"></div>
-    <div class="col-md-3 align-right" ng-repeat="roi in noi_roi track by $index">{{roi | percentage:2}}</div>
+    <div class="col-sm-5 align-center subsection-header no-bottom-border">Net Operating Income ROI</div>
+    <div class="col-sm-2 align-right"></div>
+    <div class="col-sm-2 align-right"></div>
+    <div class="col-sm-3 align-right" ng-repeat="roi in noi_roi track by $index">{{roi | percentage:2}}</div>
   </div>
   <div class="row">
-    <div class="col-md-5 align-center subsection-header no-bottom-border">Cash ROI</div>
-    <div class="col-md-2 align-right"></div>
-    <div class="col-md-2 align-right"></div>
-    <div class="col-md-3 align-right" ng-repeat="roi in cash_roi track by $index">{{roi | percentage:2}}</div>
+    <div class="col-sm-5 align-center subsection-header no-bottom-border">Cash ROI</div>
+    <div class="col-sm-2 align-right"></div>
+    <div class="col-sm-2 align-right"></div>
+    <div class="col-sm-3 align-right" ng-repeat="roi in cash_roi track by $index">{{roi | percentage:2}}</div>
   </div>
   <div class="row">
-    <div class="col-md-5 align-center subsection-header">Total ROI</div>
-    <div class="col-md-2 align-right"></div>
-    <div class="col-md-2 align-right"></div>
-    <div class="col-md-3 align-right" ng-repeat="roi in total_roi track by $index">{{roi | percentage:2}}</div>
+    <div class="col-sm-5 align-center subsection-header">Total ROI</div>
+    <div class="col-sm-2 align-right"></div>
+    <div class="col-sm-2 align-right"></div>
+    <div class="col-sm-3 align-right" ng-repeat="roi in total_roi track by $index">{{roi | percentage:2}}</div>
   </div>
 </div>
