--- a/public/investment_properties_pages/exit_scenarios.html
+++ b/public/investment_properties_pages/exit_scenarios.html
@@ -1,49 +1,49 @@
 <div id="exit-scenarios" class="top-padded">
-  <div class="col-md-15">
+  <div class="col-sm-15">
     <div class="row">
-      <div class="col-md-10 align-right"></div>
-      <div class="col-md-4 align-right column-header">Exit Price</div>
-      <div class="col-md-5 align-right column-header">Gain on Sale</div>
-      <div class="col-md-5 align-right column-header">Cap Rate</div>
+      <div class="col-sm-10 align-right"></div>
+      <div class="col-sm-4 align-right column-header">Exit Price</div>
+      <div class="col-sm-5 align-right column-header">Gain on Sale</div>
+      <div class="col-sm-5 align-right column-header">Cap Rate</div>
     </div>
     <div class="row">
-      <div class="col-md-8 align-center subsection-header no-bottom-border">Est Exit Price/Gain on Sale - 1 Yr</div>
-      <div class="col-md-2 align-right"></div>
-      <div class="col-md-4 align-right">{{first_year_exit_price | currency:'$':0}}</div>
-      <div class="col-md-5 align-right">{{first_year_gain_on_sale | currency:'$':0}}</div>
-      <div class="col-md-5 align-right">{{cap_rate | percentage:2}}</div>
+      <div class="col-sm-8 align-center subsection-header no-bottom-border">Est Exit Price/Gain on Sale - 1 Yr</div>
+      <div class="col-sm-2 align-right"></div>
+      <div class="col-sm-4 align-right">{{first_year_exit_price | currency:'$':0}}</div>
+      <div class="col-sm-5 align-right">{{first_year_gain_on_sale | currency:'$':0}}</div>
+      <div class="col-sm-5 align-right">{{cap_rate | percentage:2}}</div>
     </div>
     <div class="row">
-      <div class="col-md-8 align-center subsection-header no-bottom-border">Est Exit Price/Gain on Sale - 3 Yr</div>
-      <div class="col-md-2 align-right"></div>
-      <div class="col-md-4 align-right">{{third_year_exit_price | currency:'$':0}}</div>
-      <div class="col-md-5 align-right">{{third_year_gain_on_sale | currency:'$':0}}</div>
-      <div class="col-md-5 align-right">{{cap_rate | percentage:2}}</div>
+      <div class="col-sm-8 align-center subsection-header no-bottom-border">Est Exit Price/Gain on Sale - 3 Yr</div>
+      <div class="col-sm-2 align-right"></div>
+      <div class="col-sm-4 align-right">{{third_year_exit_price | currency:'$':0}}</div>
+      <div class="col-sm-5 align-right">{{third_year_gain_on_sale | currency:'$':0}}</div>
+      <div class="col-sm-5 align-right">{{cap_rate | percentage:2}}</div>
     </div>
     <div class="row">
-      <div class="col-md-8 align-center subsection-header">Est Exit Price/Gain on Sale - 5 Yr</div>
-      <div class="col-md-2 align-right"></div>
-      <div class="col-md-4 align-right">{{fifth_year_exit_price | currency:'$':0}}</div>
-      <div class="col-md-5 align-right">{{fifth_year_gain_on_sale | currency:'$':0}}</div>
-      <div class="col-md-5 align-right">{{cap_rate | percentage:2}}</div>
+      <div class="col-sm-8 align-center subsection-header">Est Exit Price/Gain on Sale - 5 Yr</div>
+      <div class="col-sm-2 align-right"></div>
+      <div class="col-sm-4 align-right">{{fifth_year_exit_price | currency:'$':0}}</div>
+      <div class="col-sm-5 align-right">{{fifth_year_gain_on_sale | currency:'$':0}}</div>
+      <div class="col-sm-5 align-right">{{cap_rate | percentage:2}}</div>
     </div>
   </div>
-  <div id="irr" class="col-md-9">
+  <div id="irr" class="col-sm-9">
     <div class="row">
-      <div class="col-md-11 align-right"></div>
-      <div class="col-md-5 align-right column-header">IRR</div>
+      <div class="col-sm-11 align-right"></div>
+      <div class="col-sm-5 align-right column-header">IRR</div>
     </div>
     <div class="row">
-      <div class="col-md-10 subsection-header align-center">Annualized IRR - 1 Yr</div>
-      <div class="col-md-6 align-right">{{one_year_irr | percentage:2}}</div>
+      <div class="col-sm-10 subsection-header align-center">Annualized IRR - 1 Yr</div>
+      <div class="col-sm-6 align-right">{{one_year_irr | percentage:2}}</div>
     </div>
     <div class="row">
-      <div class="col-md-10 subsection-header align-center">Annualized IRR - 3 Yr</div>
-      <div class="col-md-6 align-right">{{three_year_irr | percentage:2}}</div>
+      <div class="col-sm-10 subsection-header align-center">Annualized IRR - 3 Yr</div>
+      <div class="col-sm-6 align-right">{{three_year_irr | percentage:2}}</div>
     </div>
     <div class="row">
-      <div class="col-md-10 subsection-header align-center">Annualized IRR - 5 Yr</div>
-      <div class="col-md-6 align-right">{{five_year_irr | percentage:2}}</div>
+      <div class="col-sm-10 subsection-header align-center">Annualized IRR - 5 Yr</div>
+      <div class="col-sm-6 align-right">{{five_year_irr | percentage:2}}</div>
     </div>
   </div>
 </div>
