--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -1,22 +1,22 @@
 <div id="financing-and-income-assumptions" class="container grid-24-across">
   <navbar></navbar>
-  <div class="col-md-6">
+  <div class="col-sm-6">
     <inputs></inputs>
   </div>
-  <div class="col-md-18">
+  <div class="col-sm-18">
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-sm-8">
         <cost-and-revenue-assumptions></cost-and-revenue-assumptions>
       </div>
-      <div class="col-md-8">
+      <div class="col-sm-8">
         <financing-assumptions></financing-assumptions>
       </div>
-      <div class="col-md-8">
+      <div class="col-sm-8">
         <key-rent-ratios></key-rent-ratios>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-24">
+      <div class="col-sm-24">
         <projections-header></projections-header>
         <operating-revenues></operating-revenues>
         <operating-expenses></operating-expenses>
