--- a/public/investment_properties_pages/rental_property_summary.html
+++ b/public/investment_properties_pages/rental_property_summary.html
@@ -1,7 +1,7 @@
 <tr class="row rental-property-summary">
-  <td class="col-md-2 align-left" ng-click="goToProperty(property.id)">{{property.street}}</td>
-  <td class="col-md-1 align-left" ng-click="goToProperty(property.id)">{{property.city}}</td>
-  <td class="col-md-1 align-left" ng-click="goToProperty(property.id)">{{property.state}}</td>
-  <td class="col-md-1 align-left" ng-click="goToProperty(property.id)">{{property.zip_code}}</td>
+  <td class="col-sm-2 align-left" ng-click="goToProperty(property.id)">{{property.street}}</td>
+  <td class="col-sm-1 align-left" ng-click="goToProperty(property.id)">{{property.city}}</td>
+  <td class="col-sm-1 align-left" ng-click="goToProperty(property.id)">{{property.state}}</td>
+  <td class="col-sm-1 align-left" ng-click="goToProperty(property.id)">{{property.zip_code}}</td>
   <td><span class="glyphicon glyphicon-remove delete-property" ng-click="remove({id: property.id})"></span></td>
 </tr>
